--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.5",
     "@tag0/use-text-width": "^1.2.0",
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongodb": "4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
