--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@tag0/use-text-width": "^1.2.0",
     "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "4.1",
+    "mongoose": "^7.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
